--- a/frontend/vue-project/src/assets/main.css
+++ b/frontend/vue-project/src/assets/main.css
@@ -2,22 +2,32 @@
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* margin: 0 auto; */
+  /* padding: 1rem; */
   font-weight: normal;
+  width: 100%;
+  height: 100dvh;
 }
 
-a,
-.green {
+nav.navbar {
+  display: flex;
+  justify-content: space-between;
+  /* gap: 2rem; */
+  width: 50%;
+}
+
+nav.navbar a {
+  font-family: serif;
+  font-size: 1.5rem;
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #000;
   transition: 0.4s;
-  padding: 3px;
+  padding: .5rem 2rem;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsl(0, 0%, 94%);
   }
 }
 
@@ -27,9 +37,9 @@ a,
     place-items: center;
   }
 
-  #app {
+  /* #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
