--- a/frontend/vue-project/src/assets/base.css
+++ b/frontend/vue-project/src/assets/base.css
@@ -60,27 +60,24 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  /* color: var(--color-text); */
   background: #fff;
   transition:
     color 0.5s,
     background-color 0.5s;
-  line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  font-size: 15px;
+  line-height: 1.5;
+  font-family: sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, .5), rgba(0, 0, 0, .5)); */
+  color: #000;
+}
+
+main {
+  padding: 1rem;
+}
+
+p {
+  font-size: 1rem;
 }
